@@ -1245,17 +1245,18 @@ table.multipageimage td {
 
 /** Special:Version */
 
-table#sv-ext, table#sv-hooks {
+table#sv-ext, table#sv-hooks, table#sv-software {
 	margin: 1em;
 	padding:0em;
+	border-collapse: collapse;
 }
 
-#sv-ext td, #sv-hooks td,
-#sv-ext th, #sv-hooks th {
+#sv-ext td, #sv-hooks td, #sv-software td
+#sv-ext th, #sv-hooks th, #sv-software th {
 	border: 1px solid #A0A0A0;
 	padding: 0 0.15em 0 0.15em;
 }
-#sv-ext th, #sv-hooks th {
+#sv-ext th, #sv-hooks th, #sv-software th {
 	background-color: #F0F0F0;
 	color: black;
 	padding: 0 0.15em 0 0.15em;
